--- a/source/_posts/数据库、缓存与事务的一些学习.md
+++ b/source/_posts/数据库、缓存与事务的一些学习.md
@@ -3,7 +3,10 @@ title: 数据库、缓存与事务的一些学习
 date: 2018-07-31 00:02:06
 updated: 2018-07-31 00:02:06
 categories: tech
-tags: DataBase, MySQL, Redis
+tags: 
+	- DataBase
+	- MySQL
+	- Redis
 description: 在前段时间的开发中，遇到了关于数据库与缓存更新策略上的问题，在我的项目中可能不涉及多线程的高频读写和高一致性要求，但了解数据库的这些相关知识还是很有必要的。文中也包括一些数据库的事务隔离级别，缓存的一些使用等。
 toc: true
 ---
